src/_infrastructure/deployment-user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  labels:
    app: user-java-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registryjnk8550.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: /secrets
          readOnly: true
      volumes:
        - name: secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-keyvault"
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: user-java-service
  name: user-java-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: user-java
status:
  loadBalancer: {}
