src/_infrastructure/deployment-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  labels:
    app: userprofile-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryjnk8550.azurecr.io/tripinsights/userprofile:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets
          mountPath: /secrets
          readOnly: true
      volumes:
        - name: secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-keyvault"
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: userprofile-service
  name: userprofile-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: userprofile
status:
  loadBalancer: {}
